--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "start":"node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
