--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start":"node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "npm": "^6.1.0"
   }
 }
